# trpl

./: .gitmodules  Makefile  README.md
chapters/chapter-1/: README.md
chapters/chapter-10/: README.md  generics2.rs  generics6.rs  lifetimes1.rs  lifetimes2.rs  lifetimes4.rs  traits1.rs  traits2.rs  traits3.rs  traits4.rs
chapters/chapter-11/: README.md
chapters/chapter-12/: README.md
chapters/chapter-13/: README.md  example01.rs  example02.rs  example03.rs  example04.rs  example05.rs  example06.rs  example07.rs  example08.rs
chapters/chapter-14/: README.md
chapters/chapter-15/: README.md  example02.rs  example06.rs  example08.rs  example13.rs  example14.rs  example15.rs
chapters/chapter-16/: README.md  example02.rs
chapters/chapter-17/: README.md  example01.rs  example02.rs  example03.rs
chapters/chapter-18/: README.md  example02.rs  example03.rs  example04.rs  example06.rs  example08.rs  example10.rs  example11.rs  example14.rs  example15.rs  example16.rs  example17.rs  example19.rs  example20.rs  example21.rs
chapters/chapter-19/: README.md  example02.rs  example06.rs  example07.rs  example09.rs  example10.rs  example11.rs  example12.rs  example16.rs  example17.rs
chapters/chapter-2/: README.md
chapters/chapter-5/chapter-exercises/: Cargo.toml
chapters/chapter-5/chapter-exercises/src/: main5.rs  main6.rs  main7.rs  main8.rs
chapters/chapter-9/errors/: Cargo.toml
chapters/chapter-9/errors/src/: expect.rs  main1.rs  result1.rs  result2.rs  result3.rs  unwrap.rs
docs/: README-FOOTER.md  README-HEAD.md  README-TOC.md
(+72 files in other folders)
